<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FollowFragment"
    android:orientation="vertical"
    android:background="@color/light_grey">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/under_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:layout_gravity = "center"
            android:textSize="20sp"
            android:id="@+id/toolbar_title"
            android:translationY="7dp"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/car_follow"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/top_bottom_line"
        android:weightSum="10"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/car12"
            android:layout_weight="5"
            android:padding="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_name"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:layout_marginTop="15dp" />
            <TextView
                android:id="@+id/car_color"
                android:layout_below="@id/car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_color"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/grey"/>
            <View
                android:id="@+id/detail_color"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_toEndOf="@+id/car_color"
                android:layout_below="@+id/car_name"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/circle_car_color"/>
            <TextView
                android:id="@+id/car_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_price"
                android:layout_toEndOf="@+id/car_name"
                android:layout_marginTop="17dp"
                android:layout_marginStart="25dp"
                android:textColor="@color/orange"
                android:textSize="15sp"/>
            <View
                android:id="@+id/detail_car"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_arrow_right"
                android:layout_toEndOf="@+id/detail_color"
                android:layout_below="@+id/car_price"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>