<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="40dp"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/featured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/featured_img"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/featured_img_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/car1" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@color/dark_trans"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/featured_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/featured_head"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/featured_tit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/btn1"
                    android:paddingBottom="5dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/featured"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/featured_img"
                    android:layout_marginTop="10dp"
                    android:weightSum="10">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="9.5"
                        android:background="@drawable/line1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:layout_weight="0"
                        android:translationX="-10dp"
                        android:textColor="@color/orange"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/featured"
                android:layout_marginTop="30dp">

                <RelativeLayout
                    android:id="@+id/news_img"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/news_img_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/car2" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@color/dark_trans"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/news_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/news_head"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/news_tit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/btn1"
                    android:paddingBottom="5dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/news"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/news_img"
                    android:layout_marginTop="10dp"
                    android:weightSum="10">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="9.5"
                        android:background="@drawable/line1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:layout_weight="0"
                        android:translationX="-10dp"
                        android:textColor="@color/orange"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/news"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:id="@+id/brand_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/brand_tit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:background="@drawable/btn1"
                        android:paddingBottom="5dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        android:paddingTop="5dp"
                        android:text="@string/brand"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/line1"/>
                </LinearLayout>

                <GridView
                    android:id="@+id/brand_list"
                    android:layout_marginTop="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:numColumns="4"
                    android:layout_gravity="center"
                    android:stretchMode="columnWidth">

                </GridView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/brand_list"
                    android:layout_marginTop="5dp"
                    android:weightSum="10">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="9.5"
                        android:background="@drawable/line1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:layout_weight="0"
                        android:translationX="-10dp"
                        android:textColor="@color/orange"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/brand"
                android:layout_marginTop="30dp">

                <RelativeLayout
                    android:id="@+id/reviews_img"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/reviews_img_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/car3" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@color/dark_trans"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/reviews_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/review_head"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/reviews_tit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/btn1"
                    android:paddingBottom="5dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:paddingTop="5dp"
                    android:text="@string/review"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reviews_img"
                    android:layout_marginTop="10dp"
                    android:weightSum="10">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="9.5"
                        android:background="@drawable/line1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:layout_weight="0"
                        android:translationX="-10dp"
                        android:textColor="@color/orange"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</FrameLayout>